force-app/main/default/objects/Investing_Entity_Contact__c/Investing_Entity_Contact__c.object-meta.xml
<CustomObject>
    <description>Junction object linking an Investing Entity (Account) to a signer Contact for the DPEG Investor Relations app. Implemented as a two master-detail junction (Account primary, Contact secondary) capturing the signer role and signature requirement.</description>
    <label>Investing Entity Contact</label>
    <nameField>
        <displayFormat>IEC-{0000}</displayFormat>
        <label>Investing Entity Contact Name</label>
        <startingNumber>1</startingNumber>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Investing Entity Contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>