force-app/main/default/objects/Investing_Entity_Contact__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <label>Contact</label>
    <description>Secondary master-detail parent: the signer Contact linked to the investing entity.</description>
    <inlineHelpText>The contact (signer) associated with the investing entity.</inlineHelpText>
    <type>MasterDetail</type>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Investing Entity Contacts</relationshipLabel>
    <relationshipName>Investing_Entity_Contacts</relationshipName>
    <relationshipOrder>1</relationshipOrder>
</CustomField>