force-app/main/default/objects/Investing_Entity_Contact__c/fields/Investing_Entity__c.field-meta.xml
<CustomField>
    <fullName>Investing_Entity__c</fullName>
    <label>Investing Entity</label>
    <description>Primary master-detail parent: the Investing Entity (Account) this signer relationship belongs to.</description>
    <inlineHelpText>The investing-entity Account this contact is associated with.</inlineHelpText>
    <type>MasterDetail</type>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Investing Entity Contacts</relationshipLabel>
    <relationshipName>Investing_Entity_Contacts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
</CustomField>