force-app/main/default/objects/Investing_Entity_Contact__c/fields/Signature_Required__c.field-meta.xml
<CustomField>
    <fullName>Signature_Required__c</fullName>
    <label>Signature Required</label>
    <description>Indicates whether this signer's signature is required on subscription and transfer documents.</description>
    <inlineHelpText>Checked when this contact must sign documents for the investing entity.</inlineHelpText>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
</CustomField>