force-app/main/default/objects/Investing_Entity_Contact__c/fields/Signer_Role__c.field-meta.xml
<CustomField>
    <fullName>Signer_Role__c</fullName>
    <label>Signer Role</label>
    <description>Role this contact plays when signing documents on behalf of the investing entity.</description>
    <inlineHelpText>Select the signing role: Primary, Secondary, Custodian, or Co-Trustee.</inlineHelpText>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Primary</fullName>
            </value>
            <value>
                <fullName>Secondary</fullName>
            </value>
            <value>
                <fullName>Custodian</fullName>
            </value>
            <value>
                <fullName>Co-Trustee</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>